[gd_scene load_steps=13 format=3 uid="uid://tk2ht8csmx2a"]

[ext_resource type="Texture2D" uid="uid://dsoe6tfhewke" path="res://art/static-spider.png" id="1_2tvel"]
[ext_resource type="Script" uid="uid://c7a0rwfcr628o" path="res://code/static_spider.gd" id="1_cxny3"]
[ext_resource type="PackedScene" uid="uid://bcvq7vhcavc1m" path="res://scenes/killzone.tscn" id="2_cxny3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2tvel"]
atlas = ExtResource("1_2tvel")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxny3"]
atlas = ExtResource("1_2tvel")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq8ma"]
atlas = ExtResource("1_2tvel")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apjj7"]
atlas = ExtResource("1_2tvel")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdrye"]
atlas = ExtResource("1_2tvel")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkfjl"]
atlas = ExtResource("1_2tvel")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24pco"]
atlas = ExtResource("1_2tvel")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8xbk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tvel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxny3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq8ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apjj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdrye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkfjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24pco")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_embmk"]
radius = 4.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_cxny3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g8xbk")
autoplay = "default"

[node name="killzone" parent="AnimatedSprite2D" instance=ExtResource("2_cxny3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/killzone"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_embmk")

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(9, 0)

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(-9, 0)

[node name="ray_down_left" type="RayCast2D" parent="."]
position = Vector2(5, 4)
target_position = Vector2(0, 7)

[node name="ray_down_right" type="RayCast2D" parent="."]
position = Vector2(-6, 4)
target_position = Vector2(0, 7)
